--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Neo4j Dashboard Builder">
+    <meta name="description" content="LedgerCore Dashboard Builder">
 
-    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
-    <!-- <link rel="icon" href="%PUBLIC_URL%/logo192.png" /> -->
+    <link rel="apple-touch-icon" href="ss_logo.png" />
+    <link rel="icon" href="ss_logo.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;display=swap"/>
     <link rel="stylesheet" href="style.css"/>
     <link rel="manifest" href="manifest.json">
-    <link rel="shortcut icon" href="favicon.ico">
-    <title>NeoDash - Neo4j Dashboard Builder</title>
+    <link rel="shortcut icon" href="ss_logo.png">
+    <title>LedgerCore Dashboard</title>
     <!--
             manifest.json provides metadata used when your web app is installed on a
             user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
