--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
     <link rel="apple-touch-icon" href="ss_logo.png" />
     <link rel="icon" href="ss_logo.png" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;display=swap"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,700&amp;display=swap"/>
     <link rel="stylesheet" href="style.css"/>
     <link rel="manifest" href="manifest.json">
     <link rel="shortcut icon" href="ss_logo.png">
