--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,8 @@
     <div id="overlay"></div>
     <div id="root"></div>
     <noscript>Please enable JavaScript to view this site.</noscript>
+    <!-- Environment variables for Docker deployment -->
+    <script src="env.js"></script>
     <script src="bundle.js"></script>
 </body>
 
